<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_chatroom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dot.dominionofcity.ChatroomActivity" >

    <dot.dominionofcity.ChatroomView
        android:id="@+id/chatroom"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/id" />

    <EditText
        android:id="@+id/uid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/id_label"
        android:layout_toEndOf="@+id/id_label" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/uid"
        android:layout_toEndOf="@+id/uid" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dixon"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/name_label"
        android:layout_toEndOf="@+id/name_label" />

    <TextView
        android:id="@+id/room_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/name"
        android:layout_toEndOf="@+id/name" />

    <EditText
        android:id="@+id/rid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20002"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/room_label"
        android:layout_toEndOf="@+id/room_label" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/uid"
        android:onClick="session"
        android:text="@string/session" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rid"
        android:layout_toEndOf="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:onClick="toggle"
        android:textOff="@string/off"
        android:textOn="@string/on" />

</RelativeLayout>
